# Cless

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  main.cpp
cless/: CMakeLists.txt  main.cpp
cless/configure/: CMakeLists.txt  configure.h.in
cless/core/: CMakeLists.txt
cless/core/base/: CMakeLists.txt
cless/core/base/include/cless/core/base/: base.h  print.h
cless/core/base/src/: base.cpp  print.cpp
cless/core/print/: CMakeLists.txt
cless/core/print/include/cless/core/print/: ansi_escape.h
cless/core/print/src/: ansi_escape.cpp
cless/core/types/: CMakeLists.txt
cless/core/types/include/cless-core/types/: token.h
cless/core/types/include/cless/core/types/: compiler_message.h  exception.h  message.h  monadic.h  token.h
cless/core/types/src/: exception.cpp  message.cpp  token.cpp
cless/front-end/: CMakeLists.txt
cless/front-end/file/: CMakeLists.txt
cless/front-end/file/include/cless/front-end/file/: file.h
cless/front-end/file/src/: file.cpp
cless/front-end/file/test/: file.cpp  file_test.cpp
cless/front-end/lexer/: CMakeLists.txt
cless/front-end/lexer/include/cless/front-end/lexer/: data.h  impl.h  lexer.h  lexer_error.h  util.h  utils.h
cless/front-end/lexer/src/: impl.cpp  lexer.cpp  util.cpp  utils.cpp
cless/front-end/lexer/test/: character_constant_test.cpp  floating_constant_test.cpp  identifier_test.cpp  integer_constant_test.cpp  lexer_test.cpp  string_literal_test.cpp
cless/syntax/: CMakeLists.txt
cless/syntax/token/: CMakeLists.txt
cless/syntax/token/include/cless/syntax/token/: constant.h  header_name.h  identifier.h  keyword.h  punctuation.h  string_literal.h  token.h  tokenbase.h
cless/syntax/token/src/: constant.cpp  header_name.cpp  identifier.cpp  keyword.cpp  punctuation.cpp  string_literal.cpp  token.cpp  tokenbase.cpp
cless/test-data/: backslash_newline.c  char_const.c  character_constant.c  comment.c  float_const.c  floating_constant.c  integer_constant.c  string_literal.c
cless/test-data/error/: char_const_empty.c  char_const_no_close.c  string_literal.c  wrong_hex_floating.c  wrong_integer_suffix.c
